<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img_poster_desc"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelImgNotAvailable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:lines="2"
            android:text="@string/image_is_not_available"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imgPoster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgPoster"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/txtTitle"
            style="@style/ListTitleStyle"
            android:layout_width="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/txtYear"
            style="@style/ListTitleStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            tools:text="(2018)" />

        <TextView
            android:id="@+id/txtOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="6dp"
            android:lines="3"
            android:text="@string/not_available_yet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPoster"
            app:layout_constraintTop_toBottomOf="@+id/txtYear"
            tools:text="Method does not have to physically delete rows from your data storage. If you are using a sync adapter with your provider, you should consider marking a deleted row with a delete flag rather than removing the row entirely. The sync adapter can check for deleted rows and remove them from the server before deleting them from the provider" />

        <ImageView
            android:id="@+id/icStar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/ic_star_desc"
            android:src="@drawable/ic_star_gold_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/txtOverview"
            app:layout_constraintTop_toBottomOf="@id/txtOverview"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txtScore"
            style="@style/ListTitleStyle"
            android:layout_marginStart="5dp"
            android:text="@string/dash_for_null"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/icStar"
            app:layout_constraintStart_toEndOf="@+id/icStar"
            app:layout_constraintTop_toTopOf="@id/icStar"
            tools:text="7.9/10" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
