<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtAuthor"
            style="@style/ListTitleStyle"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Movie Title" />

        <ImageView
            android:id="@+id/icStar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/ic_star_desc"
            android:src="@drawable/ic_star_gold_24dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/flow_score"
            app:layout_constraintEnd_toEndOf="@id/txtScore"
            app:layout_constraintStart_toStartOf="@+id/flow_score"
            app:layout_constraintTop_toTopOf="@+id/flow_score"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txtScore"
            style="@style/ListTitleStyle"
            android:text="@string/dash_for_null"
            app:layout_constraintBottom_toBottomOf="@id/flow_score"
            app:layout_constraintStart_toEndOf="@+id/icStar"
            app:layout_constraintTop_toTopOf="@id/flow_score"
            tools:text="7.9/10"
            tools:visibility="visible" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:constraint_referenced_ids="icStar,txtScore"
            app:flow_horizontalGap="4dp"
            app:flow_maxElementsWrap="2"
            app:flow_wrapMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAuthor" />

        <TextView
            android:id="@+id/txtOverview"
            style="@style/ListDescriptionStyle"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:lines="3"
            android:text="@string/not_available_yet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow_score"
            tools:text="Method does not have to physically delete rows from your data storage. If you are using a sync adapter with your provider, you should consider marking a deleted row with a delete flag rather than removing the row entirely. The sync adapter can check for deleted rows and remove them from the server before deleting them from the provider" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
